happy client done

--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,13 @@
 .end-0.toast {
   right: -5em !important;
 }
+
+.active {
+  -webkit-transform: scale(1.05) translateY(-30px);
+          transform: scale(1.05) translateY(-30px);
+}
+
+.packages {
+  margin: 100px 0 !important;
+  line-height: 30px;
+}
